// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#makeMessage умеет в "без темы" 1`] = `
Array [
  Object {
    "fid": "13",
    "from": Object {
      "email": "",
      "name": "",
      "type": 2,
    },
    "hasAttach": false,
    "lid": Array [
      "10",
      "9",
    ],
    "mid": "163255486492185415",
    "modseq": "",
    "status": Array [
      0,
    ],
    "subjEmpty": true,
    "subjPrefix": "Re:",
    "subjText": "(Без темы)",
    "tab": "default",
    "threadCount": "18",
    "tid": "161285161655207943",
    "timestamp": "1505895123000",
    "types": Array [
      "4",
      "54",
    ],
    "utc_timestamp": "1505895123",
  },
  Object {
    "fid": "7",
    "from": Object {
      "email": "",
      "name": "",
      "type": 2,
    },
    "hasAttach": false,
    "lid": Array [
      "10",
      "9",
    ],
    "mid": "163818436445607074",
    "modseq": "",
    "status": Array [
      0,
    ],
    "subjEmpty": true,
    "subjPrefix": "Re:",
    "subjText": "(Без темы)",
    "tab": "news",
    "threadCount": "31",
    "tid": "163536961468896202",
    "timestamp": "1509541285000",
    "types": Array [
      "4",
      "54",
    ],
    "utc_timestamp": "1509541285",
  },
]
`;

exports[`#makeMessage устойчива к отсутствию from 1`] = `
Array [
  Object {
    "fid": "13",
    "from": Object {
      "email": "",
      "name": "",
      "type": 2,
    },
    "hasAttach": false,
    "lid": Array [
      "10",
      "9",
    ],
    "mid": "163255486492185415",
    "modseq": "",
    "status": Array [
      0,
    ],
    "subjEmpty": false,
    "subjPrefix": "",
    "subjText": "В папку",
    "tab": "default",
    "threadCount": "18",
    "tid": "161285161655207943",
    "timestamp": "1505895123000",
    "types": Array [
      "4",
      "54",
    ],
    "utc_timestamp": "1505895123",
  },
  Object {
    "fid": "7",
    "from": Object {
      "email": "",
      "name": "",
      "type": 2,
    },
    "hasAttach": false,
    "lid": Array [
      "10",
      "9",
    ],
    "mid": "163818436445607074",
    "modseq": "",
    "status": Array [
      0,
    ],
    "subjEmpty": false,
    "subjPrefix": "",
    "subjText": "Attach",
    "tab": "news",
    "threadCount": "31",
    "tid": "163536961468896202",
    "timestamp": "1509541285000",
    "types": Array [
      "4",
      "54",
    ],
    "utc_timestamp": "1509541285",
  },
]
`;
